--- a/Style/style.css
+++ b/Style/style.css
@@ -58,21 +58,35 @@ body {
 }
 
 .produtos_container {
- 
+    display: flex; 
+    flex-wrap: wrap; 
+    justify-content: center; 
+    gap: 2%; 
 }
 
 .produto_card {
-
+    background-color: white;
+    padding: 16px;
+    width: 22%;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    text-align: center;
 }
 
 .produto_card_imagem {
-
+    width: 100%;
+    height: 180px;
+    margin-bottom: 12px;
+    object-fit: cover; /* Evita que a imagem se distorça */
 }
 
 .produto_card_titulo {
-
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 8px;
 }
 
 .produto_card_preco {
-    
+    font-size: 18px;
+    font-weight: 700;
 }
