--- a/Style/style.css
+++ b/Style/style.css
@@ -12,17 +12,23 @@
     --cor-fonte-secundaria: #F7F7F7;
 }
 
+
+
 body {
     background-color: var(--cor-fundo-principal);
     box-sizing: border-box;
     font-family: "Inter";
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
+
 
 .cabecalho { 
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 16px 15%;
+    padding: 16px 13%;
 }
 
 .cabecalho_menu{
@@ -53,7 +59,7 @@ body {
 }
 
 .main_titulo {
-    padding: 16px 15%;
+    padding: 16px 13%;
     font-size: 28px; 
 }
 
@@ -74,7 +80,7 @@ body {
 }
 
 .produto_card_imagem {
-    width: 100%;
+    width: 50%;
     height: 180px;
     margin-bottom: 12px;
     object-fit: cover; /* Evita que a imagem se distorça */
@@ -84,9 +90,78 @@ body {
     font-size: 16px;
     font-weight: 700;
     margin-bottom: 8px;
+    color: var(--cor-fonte-principal);
 }
 
 .produto_card_preco {
     font-size: 18px;
     font-weight: 700;
+    color: var(--cor-fonte-principal);
 }
+
+.produto_link {
+    text-decoration: none;
+}
+
+.rodape {
+    background-color: var(--cor-fundo-secundario); 
+    color: var(--cor-fonte-principal);      
+    text-align: center;        
+    padding: 24px 0;          
+    margin-top: 48px;       
+}
+
+.rodape_texto {
+    font-size: 16px;           
+}
+
+.apresentacao {
+    margin: 6.8% 10%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.descricao_imagem_card {
+    width: 80%;
+    border-radius: 8px;
+}
+
+.descricao {
+    width: 950px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px; 
+}
+
+.descricao_titulo {
+    font-size: 36px;
+    margin-bottom: 20px;
+    font-weight: 600;
+}
+
+.descricao_preco {
+    font-size: 24px;
+    margin-bottom: 24px;
+    font-weight: 500;
+}
+
+.descricao_botao {
+    text-align: center;
+}
+
+.descricao_texto {
+    text-align: justify;
+}
+
+.descricao_link {
+    display: inline-block;
+    background-color: var(--cor-fonte-principal);
+    color: var(--cor-fonte-secundaria);
+    text-decoration: none;
+    padding: 20px 24px;
+    border-radius: 5px;
+    font-weight: 700;
+}
+
+
